# repogen

./: .gitignore  Dockerfile  LICENSE  README.md  genrepo.yaml  pyproject.toml
.github/workflows/: ci.yml  release-docker.yml  release-pypi.yml  release-testpypi.yml  tag-on-version.yml
app/: __init__.py
examples/: README.md  base_only_sqlmodel_sync.yaml  combined_sqlalchemy_multi.yaml  combined_sqlmodel.yaml  combined_sqlmodel_multi.yaml  combined_sqlmodel_multi_async.yaml  discover_all.yaml  standalone_sqlalchemy_async.yaml  standalone_sqlmodel_sync.yaml  stub_only.yaml
scripts/: update_golden.py
src/genrepo/: config.py  constants.py  generator.py
src/genrepo/assets/: __init__.py  genrepo.sample.yaml
src/genrepo/cli/: app.py
src/genrepo/templates/: __init__.py  base_repository_sqlalchemy_async.j2  base_repository_sqlalchemy_sync.j2  base_repository_sqlmodel_async.j2  base_repository_sqlmodel_sync.j2  model_repository_user_stub.j2  repository_base_stub.j2  repository_sqlalchemy.j2  repository_sqlmodel.j2  repository_standalone_stub.j2
tests/: conftest.py  test_cli.py  test_config_validators.py  test_generated_formatting.py  test_generator_integration.py  test_personalize_methods.py  test_snapshots.py  test_templates_coverage.py
tests/golden/: base_repository_sqlmodel_sync.py  user_repository_sqlmodel_sync.py
